[gd_scene load_steps=7 format=3 uid="uid://dh8yqstallxr4"]

[ext_resource type="Script" path="res://game.gd" id="1_2w4w3"]
[ext_resource type="Texture2D" uid="uid://cdg5q62fy0kqp" path="res://resources and assets/backg_sprite.png" id="2_iip1e"]
[ext_resource type="Texture2D" uid="uid://ctsdb3jv5qql7" path="res://resources and assets/snail_sprite.png" id="3_xpswx"]
[ext_resource type="Theme" uid="uid://b3nsicbf6e401" path="res://escarg.tres" id="4_3w5jc"]
[ext_resource type="Texture2D" uid="uid://cdjleah8c0c4e" path="res://resources and assets/key_sprite_pressed.png" id="5_ysnmo"]
[ext_resource type="FontFile" uid="uid://btq5jgimhq6kv" path="res://resources and assets/fonts/montreal/Montreal-Bold.ttf" id="6_asijh"]

[node name="root" type="Node2D"]
script = ExtResource("1_2w4w3")

[node name="spawn_spots" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2(800, 100)
layout_mode = 3
anchors_preset = 0
offset_left = 331.0
offset_top = 614.0
offset_right = 1131.0
offset_bottom = 864.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 10.18

[node name="E" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(150, 25)

[node name="R" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(250, 25)

[node name="T" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(350, 25)

[node name="Y" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(450, 25)

[node name="U" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(550, 25)

[node name="I" type="Node2D" parent="spawn_spots"]
z_index = 3
position = Vector2(650, 25)

[node name="S" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(50, 100)

[node name="D" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(150, 100)

[node name="F" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(250, 100)

[node name="G" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(350, 100)

[node name="H" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(450, 100)

[node name="J" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(550, 100)

[node name="K" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(650, 100)

[node name="L" type="Node2D" parent="spawn_spots"]
z_index = 4
position = Vector2(750, 100)

[node name="V" type="Node2D" parent="spawn_spots"]
z_index = 5
position = Vector2(300, 175)

[node name="B" type="Node2D" parent="spawn_spots"]
z_index = 5
position = Vector2(400, 175)

[node name="N" type="Node2D" parent="spawn_spots"]
z_index = 5
position = Vector2(500, 175)

[node name="backg" type="Sprite2D" parent="."]
position = Vector2(1423, 559)
scale = Vector2(1.96394, 1.96394)
texture = ExtResource("2_iip1e")

[node name="player" type="Sprite2D" parent="."]
position = Vector2(216, 472)
scale = Vector2(0.365141, 0.365141)
texture = ExtResource("3_xpswx")

[node name="keyboard_keys" type="Control" parent="."]
custom_minimum_size = Vector2(800, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 266.0
offset_top = 589.0
offset_right = 1066.0
offset_bottom = 839.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("4_3w5jc")

[node name="ley_dummy" type="Sprite2D" parent="keyboard_keys"]
visible = false
position = Vector2(124, -60)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_ysnmo")

[node name="keyboard_labels" type="Control" parent="."]
custom_minimum_size = Vector2(800, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 302.0
offset_top = 595.0
offset_right = 1102.0
offset_bottom = 845.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2
theme = ExtResource("4_3w5jc")

[node name="label_dummy" type="Label" parent="keyboard_labels"]
visible = false
layout_mode = 2
offset_left = 275.0
offset_top = 96.0
offset_right = 525.0
offset_bottom = 154.0

[node name="back_button" type="Button" parent="."]
visible = false
offset_left = 648.0
offset_top = 752.0
offset_right = 760.0
offset_bottom = 827.0
text = "Back"

[node name="retry_button" type="Button" parent="."]
visible = false
offset_left = 632.0
offset_top = 664.0
offset_right = 776.0
offset_bottom = 739.0
text = "Retry"

[node name="error_counter" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 350.0
offset_top = 5.0
offset_right = 428.0
offset_bottom = 47.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_asijh")

[node name="chrono_timer" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 590.0
offset_top = 5.0
offset_right = 668.0
offset_bottom = 47.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_asijh")

[node name="distance_counter" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 972.0
offset_top = 5.0
offset_right = 1050.0
offset_bottom = 47.0
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_asijh")
